dynamic mac class loading